# MusicLuv

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
audio-engine/: .env.example  README.md  main.py  pyproject.toml
audio-engine/pipelines/: __init__.py  dtw.py  onsets.py  pitch.py  polyphonic.py  scoring.py  simplify.py  stems.py  synth.py
audio-engine/tests/: conftest.py  test_dtw.py  test_grade_endpoint.py  test_pitch.py  test_render_endpoint.py  test_scoring.py
client/: .env.example  capacitor.config.ts  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
client/src/: App.tsx  index.css
docs/: platform-roadmap.md  product-vision.md
server/: .env.example  package-lock.json  package.json  tsconfig.json
server/data/: mentorMemory.json
server/src/: authMiddleware.ts  billingService.ts  communityService.ts  compositionService.ts  digestScheduler.ts  gradingClient.ts  httpRoutes.ts  index.ts  monetizationGate.ts  observability.ts  persistence.ts  progressStore.ts  questEngine.ts  rateLimiter.ts  storageService.ts  styleFingerprint.ts  userDirectory.ts  zoomService.ts
server/test/: compositionReview.test.ts  questEngine.test.ts  styleFingerprint.test.ts
shared/catalogs/: artistCatalog.ts  communityTypes.ts  examCatalog.ts  exerciseCatalog.ts  expansionContent.ts  expansionHandAuthored.ts  expansionQuizzes.ts  expertCatalog.ts  gradingRubricCatalog.ts  instrumentCatalog.ts  lessonCatalog.ts  lessonDrillGenerator.ts  mentorCatalog.ts  planCatalog.ts  questCatalog.ts  (+6 more)
(+109 files in other folders)
